--- a/projet/src/ListPatients.form
+++ b/projet/src/ListPatients.form
@@ -104,6 +104,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="txtsearch">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtsearchActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
